--- a/www.blog.com.br/index.html
+++ b/www.blog.com.br/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="fonts/webfonts/opensans_regular_macroman/stylesheet.css">
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/blog.css">
     <title>Blog</title>
