--- a/www.blog.com.br/index.html
+++ b/www.blog.com.br/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="fonts/webfonts/opensans_regular_macroman/stylesheet.css">
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/blog.css">
+
     <title>Blog</title>
 </head>
 <body >
@@ -100,9 +101,9 @@
                 <li class="social__icon social__icon--in"><a href="#">LinkedIn</a></li>
 
             </ul>
-
-
         </footer>
     </div>
+
+    <script type="text/javascript" src="js/lab.js"></script>
 </body>
 </html>
