--- a/www.blog.com.br/index.html
+++ b/www.blog.com.br/index.html
@@ -2,13 +2,21 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" type="text/css" href="fonts/webfonts/opensans_regular_macroman/stylesheet.css">
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/blog.css">
+    <link rel="stylesheet" type="text/css" href="css/mobile.css" >
 
     <title>Blog</title>
 </head>
 <body >
+<form action="busca.php" method="post">
+    
+    <input type="search" name="busca"></input>
+    <input type="submit"></input>
+</form>
+
     <div class="container">
         <header>
             <h1 class="site-header__brand"><a href="#" >Audi</a></h1>
